--- a/src/components/ui/variant-panel/VarianPanel.module.scss
+++ b/src/components/ui/variant-panel/VarianPanel.module.scss
@@ -12,6 +12,7 @@
         background: transparent;
         border: none;
         cursor: pointer;
+        transition: color 0.2s ease-in-out;
 
         .icon {
             width: 15px;
